updated goals to 2 lines

--- a/youthtransition/pages/ya-base-goals.html
+++ b/youthtransition/pages/ya-base-goals.html
@@ -57,16 +57,22 @@
                                                        formControlName="education.goal01">
                                             </th>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                    formControlName="education.tasks01">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="education.tasks01">
+
+                                                </textarea>
                                             </td>
                                             <td>
-                                                <input class="form-control form-control-sm"
+                                                <textarea class="form-control form-control-sm"
                                                        formControlName="education.persons01">
+
+                                                </textarea>
                                             </td>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.progress01">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="education.progress01">
+
+                                                </textarea>
                                             </td>
                                             <td>
                                                 <input class="form-control form-control-sm datepicker"
@@ -76,67 +82,29 @@
                                         <tr>
                                             <th scope="row">
                                                 <input class="form-control form-control-sm"
-                                                       formControlName="employment.goal02">
+                                                       formControlName="education.goal01">
                                             </th>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.tasks02">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="education.tasks01">
+
+                                                </textarea>
                                             </td>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.persons02">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="education.persons01">
+
+                                                </textarea>
                                             </td>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.progress02">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="education.progress01">
+
+                                                </textarea>
                                             </td>
                                             <td>
                                                 <input class="form-control form-control-sm datepicker"
-                                                       formControlName="education.completionDate02">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.goal03">
-                                            </th>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.tasks03">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.persons03">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.progress03">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm datepicker"
-                                                       formControlName="education.completionDate03">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.goal04">
-                                            </th>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.tasks04">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.persons04">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="education.progress04">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm datepicker"
-                                                       formControlName="education.completionDate04">
+                                                       formControlName="education.completionDate01">
                                             </td>
                                         </tr>
                                         </tbody>
@@ -165,16 +133,22 @@
                                                        formControlName="employment.goal01">
                                             </th>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.tasks01">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="employment.tasks01">
+
+                                                </textarea>
                                             </td>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.persons01">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="employment.persons01">
+
+                                                </textarea>
                                             </td>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.progress01">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="employment.progress01">
+
+                                                </textarea>
                                             </td>
                                             <td>
                                                 <input class="form-control form-control-sm datepicker"
@@ -184,67 +158,29 @@
                                         <tr>
                                             <th scope="row">
                                                 <input class="form-control form-control-sm"
-                                                       formControlName="employment.goal02">
+                                                       formControlName="employment.goal01">
                                             </th>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.tasks02">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="employment.tasks01">
+
+                                                </textarea>
                                             </td>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.persons02">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="employment.persons01">
+
+                                                </textarea>
                                             </td>
                                             <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.progress02">
+                                                <textarea class="form-control form-control-sm"
+                                                          formControlName="employment.progress01">
+
+                                                </textarea>
                                             </td>
                                             <td>
                                                 <input class="form-control form-control-sm datepicker"
-                                                       formControlName="employment.completionDate02">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.goal03">
-                                            </th>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.tasks03">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.persons03">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.progress03">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm datepicker"
-                                                       formControlName="employment.completionDate03">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.goal04">
-                                            </th>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.tasks04">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.persons04">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm"
-                                                       formControlName="employment.progress04">
-                                            </td>
-                                            <td>
-                                                <input class="form-control form-control-sm datepicker"
-                                                       formControlName="employment.completionDate04">
+                                                       formControlName="employment.completionDate01">
                                             </td>
                                         </tr>
                                         </tbody>
